[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Levels/LevelSp.gd" type="Script" id=1]
[ext_resource path="res://src/Nodes/LevelManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/tableTopSp.png" type="Texture" id=3]
[ext_resource path="res://src/Nodes/TilesGrid.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Nodes/Deck.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Nodes/TopBar.tscn" type="PackedScene" id=6]

[node name="LevelSp" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelManager" parent="." instance=ExtResource( 2 )]

[node name="BgMp" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Player1" type="Node2D" parent="."]

[node name="TilesGrid" parent="Player1" instance=ExtResource( 4 )]
margin_left = 192.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 48.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="Deck" parent="Player1" instance=ExtResource( 5 )]
margin_left = 480.0
margin_top = 208.0
margin_right = 480.0
margin_bottom = 208.0

[node name="TopBar" parent="." instance=ExtResource( 6 )]
margin_right = 640.0

[node name="Button" type="Button" parent="."]
margin_left = 192.0
margin_top = 320.0
margin_right = 269.0
margin_bottom = 340.0
text = "End Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperAntiCheatLayer" type="ColorRect" parent="."]
visible = false
rect_min_size = Vector2( 1000, 1000 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
